Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,13 +9,28 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '20.x'
-  displayName: 'Install Node.js'
-
-- script: |
-    npm install
-    npm run test
-  displayName: 'npm install and run tests'
+jobs:
+  - job: Installation
+    displayName: 'Setting up'
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '20.x'
+      displayName: 'Install Node.js'
+    
+    - script: |
+        npm install
+      displayName: 'npm install'
+  
+  - job: RunTests
+    displayName: Run Tests
+    steps:
+    - script: |
+        npm test
+        echo "Test Execution Finished"
+        if[ -f "report.html" ]; then
+          echo "📄 Report created successfully"
+        else
+          echo "❌ Report was not created"
+          exit 1
+        fi
