--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,12 @@ steps:
 - script: |
     npm run test
     echo "Test Execution Finished"
-    if [ -f "index.html" ]; then
+    if [ -f "index.html" ]; then      
+      git config --global user.email "darkensses@gmail.com"
+      git config --global user.name "Jasiel Guillen"
+      git add index.html
+      git commit -m "Report generated $(Build.BuildNumber)"
+      git push https://$(GITHUB_TOKEN)@github.com/Darkensses/playwright-cucumber-api-test.git HEAD:main
       echo "📄 Report created successfully"
     else
       echo "❌ Report was not created"
