--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,14 @@ steps:
     npm run test
     echo "Test Execution Finished"
     if [ -f "index.html" ]; then      
-      git config --global user.email "darkensses@gmail.com"
-      git config --global user.name "Jasiel Guillen"
-      git pull origin main
+      rm -rf playwright-cucumber-api-test
+      git clone https://$(GITHUB_TOKEN)@github.com/Darkensses/playwright-cucumber-api-test.git
+      cd playwright-cucumber-api-test
+      
+      cp $(Build.ArtifactStagingDirectory)/index.html ./index.html
+      
       git add index.html
-      git commit -m "Report generated $(Build.BuildNumber)"
+      git commit -m "Deploy report $(Build.BuildNumber)"
       git push https://$(GITHUB_TOKEN)@github.com/Darkensses/playwright-cucumber-api-test.git HEAD:main
       echo "📄 Report created successfully"
     else
