--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,9 @@ steps:
 - script: |
     npm run test
     echo "Test Execution Finished"
-    if [ -f "index.html" ]; then      
+    if [ -f "index.html" ]; then
+      git config --global user.email "darkensses@gmail.com"
+      git config --global user.name "Jasiel Guillen"
       rm -rf playwright-cucumber-api-test
       git clone https://$(GITHUB_TOKEN)@github.com/Darkensses/playwright-cucumber-api-test.git
       cd playwright-cucumber-api-test
